# AURA-DASHBOARD

./: .gitignore  AURA Enhanced - Project Inventory & Structure Analysis.html  AURA_DASHBOARD.txt  AURA_PARSER_v2_0_20241126_FOUNTAIN.py  Dockerfile  Final File Structure.txt  README.md  aura_dashboard.html  budget_analysis_startup.py  budget_comparison.py  budget_templates.py  charts_data.py  check_file_contents.py  check_files.py  check_setup.py  comparison_charts.py  docker-compose.yml  excel_exporter.py  fix_all_files.py  fix_files.py  fix_onedrive.py  generate_test_files.py  generate_tests.py  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.txt  risk_manager.py  run.bat  run_server.bat  script_parser.py  setup.py  template-styles.css  test_import.py  test_version.html  web_app_FIXED_ALL_ERRORS.html  web_app_v1_original.html
contract-review-tool/: .dockerignore  Dockerfile  Start server.BAT  app.py  requirements.txt
production-budget-parser/: .dockerignore  CHANGELOG.md  Dockerfile  Start server.BAT  api_keys.json  charts_data.py  comparison_charts.py  database_models.py  flask_auth.py  requirements.txt  web_app.py
screenflow-aura/: .dockerignore  Dockerfile  Start server.BAT  app.py  requirements.txt
src/: app.py  budget_analyzer.py
static/: modern-styles.css  web_app_with_templates.py
test_files/: 10_quarterly_comparison.csv  3_tech_startup.csv  6_edge_cases.csv  7_department_heavy.csv  9_international.csv
tests/: test_budget_analyzer.py
uploads/: 1_basic_budget.csv  2_film_production.csv  4_event_conference.csv  5_nonprofit_org.csv  (+2 more)
(+30 files in other folders)
